--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web studio</title>
+    <link rel="stylesheet" href="./css/style.css" />
 </head>
 
 <body>
@@ -18,8 +19,8 @@
             </a>
 
             <ul>
-                <li><a href="">Студия</a></li>
-                <li><a href="">Портфолио</a></li>
+                <li><a href="./index.html">Студия</a></li>
+                <li><a href="./portfolio.html">Портфолио</a></li>
                 <li><a href="">Контакты</a></li>
             </ul>
         </nav>
@@ -69,17 +70,17 @@
             <h2>Чем мы занимаемся</h2>
             <ul>
                 <li>
-                    <img src="./images/job/job1.jpg" alt="Програмирование" width="370" height="294">
+                    <img src="./images/job/job-1.jpg" alt="Програмирование" width="370" height="294">
                 </li>
             </ul>
             <ul>
                 <li>
-                    <img src="./images/job/job2.jpg" alt="Тестирование" width="370" height="294">
+                    <img src="./images/job/job-2.jpg" alt="Тестирование" width="370" height="294">
                 </li>
             </ul>
             <ul>
                 <li>
-                    <img src="./images/job/job3.jpg" alt="Дизайн" width="370" height="294">
+                    <img src="./images/job/job-3.jpg" alt="Дизайн" width="370" height="294">
                 </li>
             </ul>
         </section>
@@ -90,30 +91,30 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./images/team/team1.jpg" alt="Дизайнет" width="270" height="260">
+                    <img src="./images/team/team-1.jpg" alt="Дизайнер" width="270" height="260">
                     <h3>Игорь Демьяненко</h3>
-                    <p>Product Designer</p>
+                    <p lang="en">Product Designer</p>
                 </li>
             </ul>
             <ul>
                 <li>
-                    <img src="./images/team/team2.jpg" alt="Разработчик" width="270" height="260">
+                    <img src="./images/team/team-2.jpg" alt="Разработчик" width="270" height="260">
                     <h3>Ольга Репина</h3>
-                    <p>Frontend Developer</p>
+                    <p lang="en">Frontend Developer</p>
                 </li>
             </ul>
             <ul>
                 <li>
-                    <img src="./images/team/team3.jpg" alt="Маркетолог" width="270" height="260">
+                    <img src="./images/team/team-3.jpg" alt="Маркетолог" width="270" height="260">
                     <h3>Николай Тарасов</h3>
-                    <p>Marketing</p>
+                    <p lang="en">Marketing</p>
                 </li>
             </ul>
             <ul>
                 <li>
-                    <img src="./images/team/team4.jpg" alt="Дизайнер" width="270" height="260">
+                    <img src="./images/team/team-4.jpg" alt="Дизайнер" width="270" height="260">
                     <h3>Михаил Ермаков</h3>
-                    <p>UI Designer</p>
+                    <p lang="en">UI Designer</p>
                 </li>
             </ul>
 
