--- a/index.html
+++ b/index.html
@@ -14,35 +14,35 @@
     <!-- Шапка сайта -->
     <header>
         <nav>
-            <a href="./index.html">
-                Web studio
+            <a href="./index.html" class="logo-secondary">
+                <span class="logo-primary">Web</span> Studio
             </a>
 
-            <ul>
-                <li><a href="./index.html">Студия</a></li>
-                <li><a href="./portfolio.html">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+            <ul class="site-nav list">
+                <li><a href="./index.html" class="link current">Студия</a></li>
+                <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+                <li><a href="" class="link">Контакты</a></li>
             </ul>
         </nav>
 
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+380961111111</a></li>
+        <ul class="auth-nav list">
+            <li><a href="mailto:info@devstudio.com" class="list link">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" class="list link">+380961111111</a></li>
         </ul>
 
     </header>
 
     <main>
         <!-- Герой -->
-        <section>
+        <section class="section">
             <h1>Эффективные решения для вашего бизнеса</h1>
-            <button type="button">
+            <button type="button" class="button">
                 Заказать услугу
             </button>
         </section>
 
         <!-- Особенности -->
-        <section>
+        <section class="section">
             <h2>Особенности</h2>
 
             <ul>
@@ -66,7 +66,7 @@
         </section>
 
         <!-- Чем мы занимаемся -->
-        <section>
+        <section class="section">
             <h2>Чем мы занимаемся</h2>
             <ul>
                 <li>
@@ -87,7 +87,7 @@
 
         <!-- Наша команда -->
 
-        <section>
+        <section class="section-team">
             <h2>Наша команда</h2>
             <ul>
                 <li>
@@ -123,8 +123,8 @@
 
     <!-- Футер -->
     <footer>
-        <a href="./index.html">
-            Web studio
+        <a href="./index.html" class="logo-secondary">
+            <span class="logo-primary">Web</span> Studio
         </a>
 
         <address>
