--- a/portfolio.html
+++ b/portfolio.html
@@ -13,39 +13,41 @@
     <!-- Шапка сайта -->
     <header>
         <nav>
-            <a href="./index.html">
-                Web studio
+            <a href="./index.html" class="logo-secondary">
+                <span class="logo-primary">Web</span> Studio
             </a>
 
-            <ul>
-                <li><a href="./index.html">Студия</a></li>
-                <li><a href="./portfolio.html">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+            <ul class="site-nav list">
+                <li><a href="./index.html" class="link">Студия</a></li>
+                <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
+                <li><a href="" class="link">Контакты</a></li>
             </ul>
         </nav>
 
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+380961111111</a></li>
+        <ul class="auth-nav list">
+            <li><a href="mailto:info@devstudio.com" class="list link">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" class="list link">+380961111111</a></li>
         </ul>
 
     </header>
 
     <main>
 
+        <h1>Контент страницы Портфолио</h1>
+
         <!-- Фильтры -->
         <section>
             <div>
-                <button type="button">Все</button>
-                <button type="button">Веб-сайты</button>
-                <button type="button">Приложения</button>
-                <button type="button">Дизайн</button>
-                <button type="button">Маркетинг</button>
+                <button type="button" class="button">Все</button>
+                <button type="button" class="portfolio-button">Веб-сайты</button>
+                <button type="button" class="portfolio-button">Приложения</button>
+                <button type="button" class="portfolio-button">Дизайн</button>
+                <button type="button" class="portfolio-button">Маркетинг</button>
             </div>
         </section>
 
         <!-- Проэкты -->
-        <section>
+        <section class="section">
             <h2>Проэкты</h2>
             <ul>
                 <li>
@@ -125,8 +127,8 @@
 
     <!-- Футер -->
     <footer>
-        <a href="./index.html">
-            Web studio
+        <a href="./index.html" class="logo-secondary">
+            <span class="logo-primary">Web</span> Studio
         </a>
 
         <address>
