--- a/portfolio.html
+++ b/portfolio.html
@@ -37,12 +37,12 @@
             <h1>Контент страницы Портфолио</h1>
 
             <!-- Фильтры -->
-            <div>
-                <button type="button" class="button">Все</button>
-                <button type="button" class="portfolio-button">Веб-сайты</button>
-                <button type="button" class="portfolio-button">Приложения</button>
-                <button type="button" class="portfolio-button">Дизайн</button>
-                <button type="button" class="portfolio-button">Маркетинг</button>
+            <div class="button-nav list">
+                <button type="button" class="portfolio-button link">Все</button>
+                <button type="button" class="portfolio-button link">Веб-сайты</button>
+                <button type="button" class="portfolio-button link">Приложения</button>
+                <button type="button" class="portfolio-button link">Дизайн</button>
+                <button type="button" class="portfolio-button link">Маркетинг</button>
             </div>
 
 
