--- a/portfolio.html
+++ b/portfolio.html
@@ -51,73 +51,83 @@
             <h2>Проэкты</h2>
             <ul>
                 <li>
-                    <img src="./images/portfolio/img-1.jpg" alt="Скриншот сайта" width="370" height="294">
-                    <h3>Технокряк</h3>
-                    <p>Веб-сайт</p>
+                    <a href="./"><img src="./images/portfolio/img-1.jpg" alt="Скриншот сайта" width="370" height="294">
+                        <h3>Технокряк</h3>
+                        <p>Веб-сайт</p>
+                    </a>
                 </li>
             </ul>
 
             <ul>
                 <li>
-                    <img src="./images/portfolio/img-2.jpg" alt="Постер спорт" width="370" height="294">
-                    <h3>Постер New Orlean vs Golden Star</h3>
-                    <p>Дизайн</p>
+                    <a href="./"><img src="./images/portfolio/img-2.jpg" alt="Постер спорт" width="370" height="294">
+                        <h3>Постер New Orlean vs Golden Star</h3>
+                        <p>Дизайн</p>
+                    </a>
                 </li>
             </ul>
 
             <ul>
                 <li>
-                    <img src="./images/portfolio/img-3.jpg" alt="Лого сайта" width="370" height="294">
-                    <h3>Ресторан Seafood</h3>
-                    <p>Приложение</p>
+                    <a href="./"><img src="./images/portfolio/img-3.jpg" alt="Лого сайта" width="370" height="294">
+                        <h3>Ресторан Seafood</h3>
+                        <p>Приложение</p>
+                    </a>
                 </li>
             </ul>
 
             <ul>
                 <li>
-                    <img src="./images/portfolio/img-4.jpg" alt="Наушники" width="370" height="294">
-                    <h3>Проект Prime</h3>
-                    <p>Маркетинг</p>
+                    <a href="./"><img src="./images/portfolio/img-4.jpg" alt="Наушники" width="370" height="294">
+                        <h3>Проект Prime</h3>
+                        <p>Маркетинг</p>
+                    </a>
                 </li>
             </ul>
 
             <ul>
                 <li>
-                    <img src="./images/portfolio/img-5.jpg" alt="Коробки" width="370" height="294">
-                    <h3>Проект Boxes</h3>
-                    <p>Приложение</p>
+                    <a href="./"><img src="./images/portfolio/img-5.jpg" alt="Коробки" width="370" height="294">
+                        <h3>Проект Boxes</h3>
+                        <p>Приложение</p>
+                    </a>
                 </li>
             </ul>
 
             <ul>
                 <li>
-                    <img src="./images/portfolio/img-6.jpg" alt="Скриншот сайта" width="370" height="294">
-                    <h3>Inspiration has no Borders</h3>
-                    <p>Веб-сайт</p>
+                    <a href="./"><img src="./images/portfolio/img-6.jpg" alt="Скриншот сайта" width="370" height="294">
+                        <h3>Inspiration has no Borders</h3>
+                        <p>Веб-сайт</p>
+                    </a>
                 </li>
             </ul>
 
             <ul>
                 <li>
-                    <img src="./images/portfolio/img-7.jpg" alt="Журнал" width="370" height="294">
-                    <h3>Издание Limited Edition</h3>
-                    <p>Дизайн</p>
+                    <a href="./"><img src="./images/portfolio/img-7.jpg" alt="Журнал" width="370" height="294">
+                        <h3>Издание Limited Edition</h3>
+                        <p>Дизайн</p>
+                    </a>
                 </li>
             </ul>
 
             <ul>
                 <li>
-                    <img src="./images/portfolio/img-8.jpg" alt="Лейба" width="370" height="294">
-                    <h3>Проект LAB</h3>
-                    <p>Маркетинг</p>
+                    <a href="./"><img src="./images/portfolio/img-8.jpg" alt="Лейба" width="370" height="294">
+                        <h3>Проект LAB</h3>
+                        <p>Маркетинг</p>
+                    </a>
                 </li>
             </ul>
 
             <ul>
                 <li>
-                    <img src="./images/portfolio/img-9.jpg" alt="Работа за крмпьютером" width="370" height="294">
-                    <h3>Growing Business</h3>
-                    <p>Приложение</p>
+                    <a href="./"><img src="./images/portfolio/img-9.jpg" alt="Работа за крмпьютером" width="370"
+                            height="294">
+                        <h3>Growing Business</h3>
+                        <p>Приложение</p>
+                    </a>
                 </li>
             </ul>
 
