--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <!-- Шапка сайта -->
     <header>
         <nav>
-            <a href="./index.html" class="logo-secondary">
-                <span class="logo-primary">Web</span> Studio
+            <a href="./index.html" class="logo">
+                <span class="accent">Web</span> Studio
             </a>
 
             <ul class="site-nav list">
@@ -123,8 +123,8 @@
 
     <!-- Футер -->
     <footer>
-        <a href="./index.html" class="logo-secondary">
-            <span class="logo-primary">Web</span> Studio
+        <a href="./index.html" class="logo">
+            <span class="accent">Web</span> Studio
         </a>
 
         <address>
