--- a/portfolio.html
+++ b/portfolio.html
@@ -13,8 +13,8 @@
     <!-- Шапка сайта -->
     <header>
         <nav>
-            <a href="./index.html" class="logo-secondary">
-                <span class="logo-primary">Web</span> Studio
+            <a href="./index.html" class="logo">
+                <span class="accent">Web</span> Studio
             </a>
 
             <ul class="site-nav list">
@@ -137,8 +137,8 @@
 
     <!-- Футер -->
     <footer>
-        <a href="./index.html" class="logo-secondary">
-            <span class="logo-primary">Web</span> Studio
+        <a href="./index.html" class="logo">
+            <span class="accent">Web</span> Studio
         </a>
 
         <address>
