--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <main>
         <!-- Герой -->
-        <section class="section">
+        <section class="hero-title">
             <h1>Эффективные решения для вашего бизнеса</h1>
             <button type="button" class="button">
                 Заказать услугу
@@ -46,43 +46,47 @@
         </section>
 
         <!-- Особенности -->
-        <section class="section">
+        <section class="features-section">
             <h2>Особенности</h2>
 
-            <ul>
+            <ul class="list">
                 <li>
-                    <h3>Внимание к деталям</h3>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    <h3 class="features-title">Внимание к деталям</h3>
+                    <p class="features-description">Идейные соображения, а также начало повседневной работы по
+                        формированию позиции.</p>
                 </li>
                 <li>
-                    <h3>Пунктуальность</h3>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    <h3 class="features-title">Пунктуальность</h3>
+                    <p class="features-description">Задача организации, в особенности же рамки и место обучения кадров
+                        влечет за собой.</p>
                 </li>
                 <li>
-                    <h3>Планирование</h3>
-                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    <h3 class="features-title">Планирование</h3>
+                    <p class="features-description">Равным образом консультация с широким активом в значительной степени
+                        обуславливает.</p>
                 </li>
                 <li>
-                    <h3>Современные технологии</h3>
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    <h3 class="features-title">Современные технологии</h3>
+                    <p class="features-description">Значимость этих проблем настолько очевидна, что реализация плановых
+                        заданий.</p>
                 </li>
             </ul>
         </section>
 
         <!-- Чем мы занимаемся -->
-        <section class="section">
-            <h2>Чем мы занимаемся</h2>
-            <ul>
+        <section class="work-section">
+            <h2 class="section-title">Чем мы занимаемся</h2>
+            <ul class="list">
                 <li>
                     <img src="./images/job/job-1.jpg" alt="Програмирование" width="370" height="294">
                 </li>
             </ul>
-            <ul>
+            <ul class="list">
                 <li>
                     <img src="./images/job/job-2.jpg" alt="Тестирование" width="370" height="294">
                 </li>
             </ul>
-            <ul>
+            <ul class="list">
                 <li>
                     <img src="./images/job/job-3.jpg" alt="Дизайн" width="370" height="294">
                 </li>
@@ -91,34 +95,34 @@
 
         <!-- Наша команда -->
 
-        <section class="section-team">
-            <h2>Наша команда</h2>
-            <ul>
+        <section class="team-section">
+            <h2 class="section-title">Наша команда</h2>
+            <ul class="list">
                 <li>
                     <img src="./images/team/team-1.jpg" alt="Дизайнер" width="270" height="260">
-                    <h3>Игорь Демьяненко</h3>
-                    <p lang="en">Product Designer</p>
+                    <h3 class="team-title">Игорь Демьяненко</h3>
+                    <p lang="en" class="team-description">Product Designer</p>
                 </li>
             </ul>
-            <ul>
+            <ul class="list">
                 <li>
                     <img src="./images/team/team-2.jpg" alt="Разработчик" width="270" height="260">
-                    <h3>Ольга Репина</h3>
-                    <p lang="en">Frontend Developer</p>
+                    <h3 class="team-title">Ольга Репина</h3>
+                    <p lang="en" class="team-description">Frontend Developer</p>
                 </li>
             </ul>
-            <ul>
+            <ul class="list">
                 <li>
                     <img src="./images/team/team-3.jpg" alt="Маркетолог" width="270" height="260">
-                    <h3>Николай Тарасов</h3>
-                    <p lang="en">Marketing</p>
+                    <h3 class="team-title">Николай Тарасов</h3>
+                    <p lang="en" class="team-description">Marketing</p>
                 </li>
             </ul>
-            <ul>
+            <ul class="list">
                 <li>
                     <img src="./images/team/team-4.jpg" alt="Дизайнер" width="270" height="260">
-                    <h3>Михаил Ермаков</h3>
-                    <p lang="en">UI Designer</p>
+                    <h3 class="team-title">Михаил Ермаков</h3>
+                    <p lang="en" class="team-description">UI Designer</p>
                 </li>
             </ul>
 
@@ -126,16 +130,21 @@
     </main>
 
     <!-- Футер -->
-    <footer>
-        <a href="./index.html" class="logo">
+    <footer class="footer-section">
+        <a href="./index.html" class="logo footer-logo">
             <span class="accent">Web</span> Studio
         </a>
 
         <address>
-            <ul>
-                <li>г. Киев, пр-т Леси Украинки, 26</li>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+380961111111</a></li>
+            <ul class="list">
+                <li>
+                    <a class="adress-info" href="https://goo.gl/maps/8xx7vyXXwGKsBaTT6" target="_blank"
+                        rel="noreferrer noopener">г. Киев,
+                        пр-т Леси Украинки,
+                        26</a>
+                </li>
+                <li><a class="contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="contacts" href="tel:+380961111111">+380961111111</a></li>
             </ul>
         </address>
 
