--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
             <!-- Проэкты -->
 
             <h2>Проэкты</h2>
-            <ul>
+            <ul class="list">
                 <li>
                     <a href="./"><img src="./images/portfolio/img-1.jpg" alt="Скриншот сайта" width="370" height="294">
                         <h3>Технокряк</h3>
@@ -62,7 +62,7 @@
                 </li>
             </ul>
 
-            <ul>
+            <ul class="list">
                 <li>
                     <a href="./"><img src="./images/portfolio/img-2.jpg" alt="Постер спорт" width="370" height="294">
                         <h3>Постер New Orlean vs Golden Star</h3>
@@ -71,7 +71,7 @@
                 </li>
             </ul>
 
-            <ul>
+            <ul class="list">
                 <li>
                     <a href="./"><img src="./images/portfolio/img-3.jpg" alt="Лого сайта" width="370" height="294">
                         <h3>Ресторан Seafood</h3>
@@ -80,7 +80,7 @@
                 </li>
             </ul>
 
-            <ul>
+            <ul class="list">
                 <li>
                     <a href="./"><img src="./images/portfolio/img-4.jpg" alt="Наушники" width="370" height="294">
                         <h3>Проект Prime</h3>
@@ -89,7 +89,7 @@
                 </li>
             </ul>
 
-            <ul>
+            <ul class="list">
                 <li>
                     <a href="./"><img src="./images/portfolio/img-5.jpg" alt="Коробки" width="370" height="294">
                         <h3>Проект Boxes</h3>
@@ -98,7 +98,7 @@
                 </li>
             </ul>
 
-            <ul>
+            <ul class="list">
                 <li>
                     <a href="./"><img src="./images/portfolio/img-6.jpg" alt="Скриншот сайта" width="370" height="294">
                         <h3>Inspiration has no Borders</h3>
@@ -107,7 +107,7 @@
                 </li>
             </ul>
 
-            <ul>
+            <ul class="list">
                 <li>
                     <a href="./"><img src="./images/portfolio/img-7.jpg" alt="Журнал" width="370" height="294">
                         <h3>Издание Limited Edition</h3>
@@ -116,7 +116,7 @@
                 </li>
             </ul>
 
-            <ul>
+            <ul class="list">
                 <li>
                     <a href="./"><img src="./images/portfolio/img-8.jpg" alt="Лейба" width="370" height="294">
                         <h3>Проект LAB</h3>
@@ -125,7 +125,7 @@
                 </li>
             </ul>
 
-            <ul>
+            <ul class="list">
                 <li>
                     <a href="./"><img src="./images/portfolio/img-9.jpg" alt="Работа за крмпьютером" width="370"
                             height="294">
@@ -140,16 +140,21 @@
     </main>
 
     <!-- Футер -->
-    <footer>
-        <a href="./index.html" class="logo">
+    <footer class="footer-section">
+        <a href="./index.html" class="logo footer-logo">
             <span class="accent">Web</span> Studio
         </a>
 
         <address>
-            <ul>
-                <li>г. Киев, пр-т Леси Украинки, 26</li>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+380961111111</a></li>
+            <ul class="list">
+                <li>
+                    <a class="adress-info" href="https://goo.gl/maps/8xx7vyXXwGKsBaTT6" target="_blank"
+                        rel="noreferrer noopener">г. Киев,
+                        пр-т Леси Украинки,
+                        26</a>
+                </li>
+                <li><a class="contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="contacts" href="tel:+380961111111">+380961111111</a></li>
             </ul>
         </address>
 
