--- a/index.html
+++ b/index.html
@@ -40,9 +40,11 @@
         <!-- Герой -->
         <section class="hero-title">
             <h1>Эффективные решения для вашего бизнеса</h1>
-            <button type="button" class="button">
-                Заказать услугу
-            </button>
+            <div class="button-hero">
+                <button type="button" class="button link">
+                    Заказать услугу
+                </button>
+            </div>
         </section>
 
         <!-- Особенности -->
