--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,8 @@
             <h2>Проэкты</h2>
             <ul class="list">
                 <li>
-                    <a href="./"><img src="./images/portfolio/img-1.jpg" alt="Скриншот сайта" width="370" height="294">
+                    <a class="projects-title" href="./"><img src="./images/portfolio/img-1.jpg" alt="Скриншот сайта"
+                            width="370" height="294">
                         <h3>Технокряк</h3>
                         <p>Веб-сайт</p>
                     </a>
@@ -64,8 +65,9 @@
 
             <ul class="list">
                 <li>
-                    <a href="./"><img src="./images/portfolio/img-2.jpg" alt="Постер спорт" width="370" height="294">
-                        <h3>Постер New Orlean vs Golden Star</h3>
+                    <a class="projects-title" href="./"><img src="./images/portfolio/img-2.jpg" alt="Постер спорт"
+                            width="370" height="294">
+                        <h3>Постер <span lang="en">New Orlean vs Golden Star</span></h3>
                         <p>Дизайн</p>
                     </a>
                 </li>
@@ -73,8 +75,9 @@
 
             <ul class="list">
                 <li>
-                    <a href="./"><img src="./images/portfolio/img-3.jpg" alt="Лого сайта" width="370" height="294">
-                        <h3>Ресторан Seafood</h3>
+                    <a class="projects-title" href="./"><img src="./images/portfolio/img-3.jpg" alt="Лого сайта"
+                            width="370" height="294">
+                        <h3>Ресторан <span lang="en">Seafood</span></h3>
                         <p>Приложение</p>
                     </a>
                 </li>
@@ -82,8 +85,9 @@
 
             <ul class="list">
                 <li>
-                    <a href="./"><img src="./images/portfolio/img-4.jpg" alt="Наушники" width="370" height="294">
-                        <h3>Проект Prime</h3>
+                    <a class="projects-title" href="./"><img src="./images/portfolio/img-4.jpg" alt="Наушники"
+                            width="370" height="294">
+                        <h3>Проект <span lang="en">Prime</span></h3>
                         <p>Маркетинг</p>
                     </a>
                 </li>
@@ -91,8 +95,9 @@
 
             <ul class="list">
                 <li>
-                    <a href="./"><img src="./images/portfolio/img-5.jpg" alt="Коробки" width="370" height="294">
-                        <h3>Проект Boxes</h3>
+                    <a class="projects-title" href="./"><img src="./images/portfolio/img-5.jpg" alt="Коробки"
+                            width="370" height="294">
+                        <h3>Проект <span lang="en">Boxes</span></h3>
                         <p>Приложение</p>
                     </a>
                 </li>
@@ -100,8 +105,9 @@
 
             <ul class="list">
                 <li>
-                    <a href="./"><img src="./images/portfolio/img-6.jpg" alt="Скриншот сайта" width="370" height="294">
-                        <h3>Inspiration has no Borders</h3>
+                    <a class="projects-title" href="./"><img src="./images/portfolio/img-6.jpg" alt="Скриншот сайта"
+                            width="370" height="294">
+                        <h3 lang="en">Inspiration has no Borders</h3>
                         <p>Веб-сайт</p>
                     </a>
                 </li>
@@ -109,8 +115,9 @@
 
             <ul class="list">
                 <li>
-                    <a href="./"><img src="./images/portfolio/img-7.jpg" alt="Журнал" width="370" height="294">
-                        <h3>Издание Limited Edition</h3>
+                    <a class="projects-title" href="./"><img src="./images/portfolio/img-7.jpg" alt="Журнал" width="370"
+                            height="294">
+                        <h3>Издание <span lang="en">Limited Edition</span></h3>
                         <p>Дизайн</p>
                     </a>
                 </li>
@@ -118,8 +125,9 @@
 
             <ul class="list">
                 <li>
-                    <a href="./"><img src="./images/portfolio/img-8.jpg" alt="Лейба" width="370" height="294">
-                        <h3>Проект LAB</h3>
+                    <a class="projects-title" href="./"><img src="./images/portfolio/img-8.jpg" alt="Лейба" width="370"
+                            height="294">
+                        <h3>Проект <span lang="en">LAB</span></h3>
                         <p>Маркетинг</p>
                     </a>
                 </li>
@@ -127,9 +135,9 @@
 
             <ul class="list">
                 <li>
-                    <a href="./"><img src="./images/portfolio/img-9.jpg" alt="Работа за крмпьютером" width="370"
-                            height="294">
-                        <h3>Growing Business</h3>
+                    <a class="projects-title" href="./"><img src="./images/portfolio/img-9.jpg"
+                            alt="Работа за крмпьютером" width="370" height="294">
+                        <h3 lang="en">Growing Business</h3>
                         <p>Приложение</p>
                     </a>
                 </li>
