--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
 
             <!-- Фильтры -->
             <div class="button-nav list">
-                <button type="button" class="portfolio-button link">Все</button>
+                <button type="button" class="portfolio-button-first">Все</button>
                 <button type="button" class="portfolio-button link">Веб-сайты</button>
                 <button type="button" class="portfolio-button link">Приложения</button>
                 <button type="button" class="portfolio-button link">Дизайн</button>
