--- a/portfolio.html
+++ b/portfolio.html
@@ -161,8 +161,10 @@
                         пр-т Леси Украинки,
                         26</a>
                 </li>
-                <li><a class="contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="contacts" href="tel:+380961111111">+380961111111</a></li>
+            </ul>
+            <ul class="contacts list">
+                <li><a href="mailto:info@devstudio.com" class="list link">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111" class="list link">+380961111111</a></li>
             </ul>
         </address>
 
