--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
     <main>
         <!-- Герой -->
-        <section class="hero-title">
-            <h1>Эффективные решения для вашего бизнеса</h1>
+        <section class="hero-section">
+            <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
             <div class="button-hero">
                 <button type="button" class="button link">
                     Заказать услугу
@@ -105,22 +105,16 @@
                     <h3 class="team-title">Игорь Демьяненко</h3>
                     <p lang="en" class="team-description">Product Designer</p>
                 </li>
-            </ul>
-            <ul class="list">
                 <li>
                     <img src="./images/team/team-2.jpg" alt="Разработчик" width="270" height="260">
                     <h3 class="team-title">Ольга Репина</h3>
                     <p lang="en" class="team-description">Frontend Developer</p>
                 </li>
-            </ul>
-            <ul class="list">
                 <li>
                     <img src="./images/team/team-3.jpg" alt="Маркетолог" width="270" height="260">
                     <h3 class="team-title">Николай Тарасов</h3>
                     <p lang="en" class="team-description">Marketing</p>
                 </li>
-            </ul>
-            <ul class="list">
                 <li>
                     <img src="./images/team/team-4.jpg" alt="Дизайнер" width="270" height="260">
                     <h3 class="team-title">Михаил Ермаков</h3>
@@ -145,12 +139,12 @@
                         пр-т Леси Украинки,
                         26</a>
                 </li>
+                <div class="contacts">
+                    <li><a href="mailto:info@devstudio.com" class="list link">info@devstudio.com</a></li>
+                    <li><a href="tel:+380961111111" class="list link">+380961111111</a></li>
+                </div>
             </ul>
-            </ul>
-            <ul class="contacts list">
-                <li><a href="mailto:info@devstudio.com" class="list link">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="list link">+380961111111</a></li>
-            </ul>
+
         </address>
 
     </footer>
