--- a/portfolio.html
+++ b/portfolio.html
@@ -41,13 +41,13 @@
             <h1>Контент страницы Портфолио</h1>
 
             <!-- Фильтры -->
-            <div class="button-nav list">
-                <button type="button" class="portfolio-button-first">Все</button>
-                <button type="button" class="portfolio-button link">Веб-сайты</button>
-                <button type="button" class="portfolio-button link">Приложения</button>
-                <button type="button" class="portfolio-button link">Дизайн</button>
-                <button type="button" class="portfolio-button link">Маркетинг</button>
-            </div>
+            <ul class="button-nav list">
+                <li><button type="button" class="portfolio-button button-first">Все</button></li>
+                <li><button type="button" class="portfolio-button link">Веб-сайты</button></li>
+                <li><button type="button" class="portfolio-button link">Приложения</button></li>
+                <li><button type="button" class="portfolio-button link">Дизайн</button></li>
+                <li><button type="button" class="portfolio-button link">Маркетинг</button></li>
+            </ul>
 
 
             <!-- Проэкты -->
@@ -61,9 +61,6 @@
                         <p>Веб-сайт</p>
                     </a>
                 </li>
-            </ul>
-
-            <ul class="list">
                 <li>
                     <a class="projects-title" href="./"><img src="./images/portfolio/img-2.jpg" alt="Постер спорт"
                             width="370" height="294">
@@ -71,9 +68,6 @@
                         <p>Дизайн</p>
                     </a>
                 </li>
-            </ul>
-
-            <ul class="list">
                 <li>
                     <a class="projects-title" href="./"><img src="./images/portfolio/img-3.jpg" alt="Лого сайта"
                             width="370" height="294">
@@ -81,9 +75,6 @@
                         <p>Приложение</p>
                     </a>
                 </li>
-            </ul>
-
-            <ul class="list">
                 <li>
                     <a class="projects-title" href="./"><img src="./images/portfolio/img-4.jpg" alt="Наушники"
                             width="370" height="294">
@@ -91,9 +82,6 @@
                         <p>Маркетинг</p>
                     </a>
                 </li>
-            </ul>
-
-            <ul class="list">
                 <li>
                     <a class="projects-title" href="./"><img src="./images/portfolio/img-5.jpg" alt="Коробки"
                             width="370" height="294">
@@ -101,9 +89,6 @@
                         <p>Приложение</p>
                     </a>
                 </li>
-            </ul>
-
-            <ul class="list">
                 <li>
                     <a class="projects-title" href="./"><img src="./images/portfolio/img-6.jpg" alt="Скриншот сайта"
                             width="370" height="294">
@@ -111,9 +96,6 @@
                         <p>Веб-сайт</p>
                     </a>
                 </li>
-            </ul>
-
-            <ul class="list">
                 <li>
                     <a class="projects-title" href="./"><img src="./images/portfolio/img-7.jpg" alt="Журнал" width="370"
                             height="294">
@@ -121,9 +103,6 @@
                         <p>Дизайн</p>
                     </a>
                 </li>
-            </ul>
-
-            <ul class="list">
                 <li>
                     <a class="projects-title" href="./"><img src="./images/portfolio/img-8.jpg" alt="Лейба" width="370"
                             height="294">
@@ -131,9 +110,6 @@
                         <p>Маркетинг</p>
                     </a>
                 </li>
-            </ul>
-
-            <ul class="list">
                 <li>
                     <a class="projects-title" href="./"><img src="./images/portfolio/img-9.jpg"
                             alt="Работа за крмпьютером" width="370" height="294">
@@ -161,11 +137,12 @@
                         пр-т Леси Украинки,
                         26</a>
                 </li>
+                <div class="contacts">
+                    <li><a href="mailto:info@devstudio.com" class="list link">info@devstudio.com</a></li>
+                    <li><a href="tel:+380961111111" class="list link">+380961111111</a></li>
+                </div>
             </ul>
-            <ul class="contacts list">
-                <li><a href="mailto:info@devstudio.com" class="list link">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="list link">+380961111111</a></li>
-            </ul>
+
         </address>
 
     </footer>
