--- a/portfolio.html
+++ b/portfolio.html
@@ -57,64 +57,64 @@
                 <li>
                     <a class="projects-title" href="./"><img src="./images/portfolio/img-1.jpg" alt="Скриншот сайта"
                             width="370" height="294">
-                        <h3>Технокряк</h3>
-                        <p>Веб-сайт</p>
+                        <h3 class="projects-name">Технокряк</h3>
+                        <p class="team-description">Веб-сайт</p>
                     </a>
                 </li>
                 <li>
                     <a class="projects-title" href="./"><img src="./images/portfolio/img-2.jpg" alt="Постер спорт"
                             width="370" height="294">
-                        <h3>Постер <span lang="en">New Orlean vs Golden Star</span></h3>
-                        <p>Дизайн</p>
+                        <h3 class="projects-name">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
+                        <p class="team-description">Дизайн</p>
                     </a>
                 </li>
                 <li>
                     <a class="projects-title" href="./"><img src="./images/portfolio/img-3.jpg" alt="Лого сайта"
                             width="370" height="294">
-                        <h3>Ресторан <span lang="en">Seafood</span></h3>
-                        <p>Приложение</p>
+                        <h3 class="projects-name">Ресторан <span lang="en">Seafood</span></h3>
+                        <p class="team-description">Приложение</p>
                     </a>
                 </li>
                 <li>
                     <a class="projects-title" href="./"><img src="./images/portfolio/img-4.jpg" alt="Наушники"
                             width="370" height="294">
-                        <h3>Проект <span lang="en">Prime</span></h3>
-                        <p>Маркетинг</p>
+                        <h3 class="projects-name">Проект <span lang="en">Prime</span></h3>
+                        <p class="team-description">Маркетинг</p>
                     </a>
                 </li>
                 <li>
                     <a class="projects-title" href="./"><img src="./images/portfolio/img-5.jpg" alt="Коробки"
                             width="370" height="294">
-                        <h3>Проект <span lang="en">Boxes</span></h3>
-                        <p>Приложение</p>
+                        <h3 class="projects-name">Проект <span lang="en">Boxes</span></h3>
+                        <p class="team-description">Приложение</p>
                     </a>
                 </li>
                 <li>
                     <a class="projects-title" href="./"><img src="./images/portfolio/img-6.jpg" alt="Скриншот сайта"
                             width="370" height="294">
-                        <h3 lang="en">Inspiration has no Borders</h3>
-                        <p>Веб-сайт</p>
+                        <h3 class="projects-name" lang="en">Inspiration has no Borders</h3>
+                        <p class="team-description">Веб-сайт</p>
                     </a>
                 </li>
                 <li>
                     <a class="projects-title" href="./"><img src="./images/portfolio/img-7.jpg" alt="Журнал" width="370"
                             height="294">
-                        <h3>Издание <span lang="en">Limited Edition</span></h3>
-                        <p>Дизайн</p>
+                        <h3 class="projects-name">Издание <span lang="en">Limited Edition</span></h3>
+                        <p class="team-description">Дизайн</p>
                     </a>
                 </li>
                 <li>
                     <a class="projects-title" href="./"><img src="./images/portfolio/img-8.jpg" alt="Лейба" width="370"
                             height="294">
-                        <h3>Проект <span lang="en">LAB</span></h3>
-                        <p>Маркетинг</p>
+                        <h3 class="projects-name">Проект <span lang="en">LAB</span></h3>
+                        <p class="team-description">Маркетинг</p>
                     </a>
                 </li>
                 <li>
                     <a class="projects-title" href="./"><img src="./images/portfolio/img-9.jpg"
                             alt="Работа за крмпьютером" width="370" height="294">
-                        <h3 lang="en">Growing Business</h3>
-                        <p>Приложение</p>
+                        <h3 class="projects-name" lang="en">Growing Business</h3>
+                        <p class="team-description">Приложение</p>
                     </a>
                 </li>
             </ul>
