--- a/portfolio.html
+++ b/portfolio.html
@@ -137,10 +137,10 @@
                         пр-т Леси Украинки,
                         26</a>
                 </li>
-                <div class="contacts">
-                    <li><a href="mailto:info@devstudio.com" class="list link">info@devstudio.com</a></li>
-                    <li><a href="tel:+380961111111" class="list link">+380961111111</a></li>
-                </div>
+            </ul>
+            <ul class="contacts list">
+                <li><a href="mailto:info@devstudio.com" class="list link">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111" class="list link">+380961111111</a></li>
             </ul>
 
         </address>
