--- a/index.html
+++ b/index.html
@@ -132,15 +132,15 @@
         </a>
 
         <address>
-            <ul class="contacts list">
+            <ul class="list">
                 <li>
                     <a class="adress-info" href="https://goo.gl/maps/8xx7vyXXwGKsBaTT6" target="_blank"
                         rel="noreferrer noopener">г. Киев,
                         пр-т Леси Украинки,
                         26</a>
                 </li>
-                <li><a href="mailto:info@devstudio.com" class="list link">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="list link">+380961111111</a></li>
+                <li><a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111" class="contacts">+380961111111</a></li>
             </ul>
 
         </address>
