--- a/portfolio.html
+++ b/portfolio.html
@@ -18,8 +18,7 @@
     <header>
         <nav>
             <a href="./index.html" class="logo">
-                <span class="accent">Web</span> Studio
-            </a>
+                <span class="accent">Web</span>Studio</a>
 
             <ul class="site-nav list">
                 <li><a href="./index.html" class="link">Студия</a></li>
@@ -126,8 +125,7 @@
     <!-- Футер -->
     <footer class="footer-section">
         <a href="./index.html" class="logo footer-logo">
-            <span class="accent">Web</span> Studio
-        </a>
+            <span class="accent">Web</span>Studio</a>
 
         <address>
             <ul class="list">
